# pi-control-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pi-control.toml  pi-control.toml.example  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  USAGE.md  pi-memory.md  pi_control_memory_codex_handoff.md
docs/superpowers/plans/: 2026-04-16-pi-setup-and-tool-fixes.md
scripts/: gen-cert.sh
src/pi_remote_mcp/: __init__.py  cli.py  config.py  runtime_tasks.py  server.py
src/pi_remote_mcp/desktop/: backend_selector.py
src/pi_remote_mcp/desktop/backends/: wayland_backend.py  x11_backend.py
src/pi_remote_mcp/memory/: __init__.py  db.py  models.py  redact.py  service.py  summarize.py
src/pi_remote_mcp/security/: auth.py  policy.py
src/pi_remote_mcp/tools/: __init__.py  desktop_tools.py  file_tools.py  memory_tools.py  mower_tools.py  network_tools.py  registry_tools.py  session_tools.py  system_tools.py  ui_tools.py
src/pi_remote_mcp/utils/: __init__.py  command_runner.py
tests/: test_backend.py  test_file_tools.py  test_memory_tools.py  test_mower_tools.py  test_network_tools.py  test_policy.py  test_registration.py  test_session_tools.py  test_system_tools.py  test_ui_tools.py  test_wayland_backend.py
